# Conditional-Generation-of-MAX-Phases

./: DATA_USAGE.md  MAX_phases_data_reproduction.ipynb  SETUP.md  environment.yml  pyproject.toml  requirements.txt  structure_matcher.py
src/: curvature.py  data_key.py  generate_prompts.py  max_validation.py  periodic_heatmap.py  stability_sweep.py
