[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "max-phase-paper"
version = "0.1.0"
description = "Crystal structure generation and analysis for MAX phases"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Jamie Swaine", email = "j.a.swaine02@gmail.com"}
]

[project.dependencies]
# Data manipulation and numerical computing
pandas >= 1.5.0
numpy >= 1.23.0
pyarrow >= 10.0.0

# Scientific computing and statistics
scipy >= 1.9.0

# Crystallography and materials science
pymatgen >= 2023.1.0
smact == 3.0.1

# Visualization
matplotlib >= 3.5.0
bokeh >= 3.0.0
selenium >= 4.0.0

# Utilities
tqdm >= 4.60.0
huggingface-hub >= 0.16.0

# Browser drivers for selenium (bokeh PNG export)
firefox >= 100.0
geckodriver >= 0.33.0

# Jupyter (for notebook support)
jupyter >= 1.0.0
ipython >= 8.0.0
ipywidgets >= 7.6.0

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py39"
line-length = 88
select = ["E", "F", "W"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
